# amgxsolver

./: .gitignore  CMakeLists.txt  README.md  amgx_solver.cpp  amgx_solver.h  amgx_test.cpp  camgx.cpp  d.bat  design.md  diagonal_test.cpp  json.cpp  main.cpp  par3_test.cpp  par4_test.cpp  par_test.cpp  par_test1.cpp  par_test2.cpp  par_test3.cpp  par_test4.cpp  par_test5.cpp  test.cpp  testcout.cpp
